# Warped-Realms-EngineG

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LDtkLoader.hpp  README.md  Toolchain-mingw-x86_64.cmake  build.sh  cleanup.sh  deploy.sh  imgui.ini  main  main.c  wasmtime.h
Assets/: ServerManifest.json  moduleA_c.wasm  moduleB_c.wasm  moduleC_c.wasm
ChimpyGL/: Actor.hpp  CMakeLists.txt  Engine.hpp  Game.cpp  Game.hpp  Math.hpp  WasmBridge.cpp  WasmBridge.hpp  WasmHostShared.hpp  WasmIntegrationService.cpp  WasmIntegrationService.hpp
ChimpyGL/Actor/: Actor.cpp  Actor.hpp  Asteroid.cpp  Asteroid.hpp  Background.cpp  Background.hpp  Bullet.cpp  Bullet.hpp  Character.cpp  Character.hpp  Enemy.cpp  Enemy.hpp  Grid.cpp  Laser.cpp  Laser.hpp  ScreenManager.cpp  ScreenManager.hpp  Ship.cpp  Ship.hpp  Tile.cpp  Tower.cpp
ChimpyGL/Actor/Component/: AIComponent.cpp  AIComponent.hpp  AIState.cpp  AnimSpriteComponent.cpp  AnimSpriteComponent.hpp  BGSpriteComponent.cpp  BGSpriteComponent.hpp  ButtonComponent.hpp  CircleComponent.cpp  CircleComponent.hpp  Component.cpp  Component.hpp  InputComponent.cpp  InputComponent.hpp  MoveComponent.cpp  MoveComponent.hpp  NavComponent.cpp  NavComponent.hpp  PhysicsInputComponent.cpp  PhysicsInputComponent.hpp  PhysicsMoveComponent.cpp  PhysicsMoveComponent.hpp  ScreenComponent.cpp  ScreenComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TileMapComponent.cpp  TileMapComponent.hpp
ChimpyGL/Actor/Screen/: MenuScreen.cpp  MenuScreen.hpp
ChimpyGL/Math/: Color.hpp  Math.hpp  Mathf.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Random.cpp  Random.hpp  Vector.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
ChimpyGL/Network/: GameClient.cpp  GameClient.hpp  GameMsgTypes.hpp  GameServer.cpp  GameServer.hpp  NetClient.hpp  NetCommon.hpp  NetConnection.hpp  NetMessage.hpp  NetServer.hpp  NetTSQueue.hpp  Network.cpp  Network.hpp  PlayerStates.hpp  SimpleUDPServer.cpp  UDPServer.cpp  UDPServer.hpp  UDPSession.cpp
ChimpyGL/Network/TutorialAsio/: NetCommon.hpp  NetConnection.hpp
ChimpyGL/Test/: ExWasm.cpp  ExWasm.hpp  Test.hpp  TestGame.hpp  TestNetwork.hpp  TestVector.hpp
ChimpyGL/WasmEngine/: ActorController.hpp  GameEngine.hpp  HostApi.hpp  WasmComponent.cpp  WasmComponent.hpp  WasmController.cpp  WasmController.hpp  WasmEngine.cpp  WasmEngine.hpp  WasmHostApi.hpp  WasmHostShared.hpp  WasmNetworkManager.cpp  WasmNetworkManager.hpp  WasmPackageServer.cpp
Cmake/: CopyRuntimeArtifacts.cmake  FindOrCloneDependency.cmake  FindOrCloneSomeRep.cmake  ProjectSetup.cmake  TargetGame.cmake
Deploy/src/: box.cpp  (+2 more)
EngineG/: CMakeLists.txt  Game.cpp  Game.hpp
EngineG/Actor/: Actor.cpp  Actor.hpp  Asteroid.cpp  Asteroid.hpp  Background.cpp  Bullet.cpp  Character.cpp  Enemy.cpp  Grid.hpp  Laser.cpp  Laser.hpp  ScreenManager.cpp  ScreenManager.hpp  Search.cpp  Ship.cpp  Tile.cpp  Tile.hpp  Tower.cpp  Tower.hpp
EngineG/Component/: AIComponent.cpp  AIState.cpp  AIState.hpp  AnimSpriteComponent.cpp  AnimSpriteComponent.hpp  BGSpriteComponent.cpp  BGSpriteComponent.hpp  CircleComponent.cpp  CircleComponent.hpp  Component.cpp  Component.hpp  InputComponent.cpp  MoveComponent.cpp  NavComponent.cpp  NavComponent.hpp  PhysicsInputComponent.cpp  PhysicsMoveComponent.cpp  PhysicsMoveComponent.hpp  ScreenComponent.cpp  SpriteComponent.cpp  SpriteComponent.hpp  TileMapComponent.cpp  TileMapComponent.hpp
EngineG/Math/: Math.hpp  Mathf.hpp  Matrix3.cpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Vector.hpp  Vector3.cpp  Vector3.hpp
EngineG/Network/: GameServer.cpp  GameServer.hpp  NetClient.hpp  NetCommon.hpp  NetServer.hpp
EngineG/Screen/: MenuScreen.cpp  MenuScreen.hpp
EngineG/Wasm/: WasmIntegrationService.cpp  WasmIntegrationService.hpp  WasmNetworkManager.cpp
EngineWasm/: CMakeLists.txt  WasmComponent.cpp  WasmEngine.hpp  WasmHostApi.cpp  WasmHostShared.hpp  WasmPackageServer.hpp
Examples/: CMakeLists.txt
Game/: CMakeLists.txt  ExQuickJs.cpp  ExWasm.cpp  ExampleEnTT.hpp  main.cpp
Game/TestModulesAssembly/: ModulePlayer.cpp  ModuleShip.cpp  ModuleWall.cpp  WASMModuleBindings.h
Game/TestModulesAssembly/SideModule/: calculate_primes.c  config.js  side_module.c
Game/TestModulesAssembly/Test/: fib.c
Game/TestModulesAssembly/ValidateModule/: validate.cpp
Game/TestModulesAssembly/math-viz/src/: math.cpp
Game/WasmEngine/: ActorController.cpp  ActorController.hpp  GameEngine.cpp  GameEngine.hpp  HostApi.cpp  HostApi.hpp  WasmComponent.cpp  WasmComponent.hpp
Game/WasmModules/: CMakeLists.txt  moduleC_c.c
Setup/: box2d-install.sh  format.sh  graphviz.sh  setup.sh  test.sh
Source/: ChimpyGL.cpp  PhysicsEngine.cpp  StartEngine.cpp
Source/console/: CMakeLists.txt  cui.cpp  window.hpp
Source/console/component/: component_manager.hpp  display_directory_cmp.hpp  image_cmp.hpp
Source/console/include/: config_imgui.hpp  cui.hpp
Test/: Test.hpp  TestNetwork.hpp
Utils/: linux.sh  run.sh  setup.sh  windows.sh
WasmModules/: WASMModuleBindings.h  moduleA_c.c  moduleB_c.c  moduleC_c.c
WasmModules/WASM/math-viz/src/: CMakeLists.txt  math.cpp
chimpy/: CMakeLists.txt  MathFuncs.cpp  Network.hpp  Test.hpp
chimpy/Actor/: Actor.cpp  Laser.cpp  Laser.hpp
chimpy/Actor/Component/: BGSpriteComponent.hpp  Component.hpp  Game.hpp  PhysicsInputComponent.hpp  PhysicsMoveComponent.hpp  SpriteComponent.cpp
chimpy/Math/: Color.hpp  Vector2.cpp  Vector3.cpp
chimpy/Network/: Network.cpp  Network.hpp
chimpy/Network/Asio/tutorial/: NetMessage.hpp
chimpy/Test/: TestNetwork.hpp
chimpy/console/: window.cpp
chimpy/console/component/: component.hpp  text_cmp.hpp
chimpy/engine/Actor/: Asteroid.cpp  Ship.hpp
chimpy/engine/Actor/Component/: Actor.hpp  AnimSpriteComponent.cpp  BGSpriteComponent.cpp
chimpy/engine/Math/: Random.hpp  Vector.hpp
chimpy/engine/Network/Asio/: Message.hpp
chimpy/include/WarpedRealms/: MathFuncsDll.hpp
chimpy/model/: Animal.hpp  animal.i
cmake/: FindOrCloneSomeRep.cmake  Testing.cmake
examples/: Bootstrap.cpp
logic/: ExampleEnTT.hpp
(+90 files in other folders)
